# kv_file

./: CMakeLists.txt  README.md  kv_file.cpp  kv_file_test.cpp  test_file.txt
dependent_projects/: CMakeLists.txt  CMakeListsCompiler.txt  dependencies.txt
include/: kv_file.h
src/: kv_file.cpp
tests/: kv_file_test.cpp
